# rusta_chip8

./: Cargo.toml  README.md
src/: main.rs
src/chip8/: cpu.rs  mod.rs
src/ui/: display.rs  input.rs  mod.rs
