[package]
name = "rusta_chip8"
version = "0.1.0"
authors = ["lloyd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.4.3"
rand = "0.7.3"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = [ "gfx", "bundled" ]